# TigorEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Release/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
Release/.cmake/api/v1/reply/: cache-v2-0d1b63d2118ae6c59019.json  cmakeFiles-v1-504b0982a756c003bef7.json  codemodel-v2-19b65004891d700741e9.json  index-2024-10-08T15-43-01-0213.json  target-TestCreate-Release-0502626635f35371bd29.json  target-TestGUI-Release-1c88838fbf0afb69447f.json  target-TestMemory-Release-39d230405e4a70b16a4e.json  target-TestModel-Release-b9c1b4dff791b94d16f1.json  target-TestParticle-Release-8bf004754cf2a078fadd.json  target-TestPath-Release-73b4fd0c2f94da12d349.json  target-TestShaderBuilder-Release-b94cb1f6c2f49215fae6.json  target-TigorEngine-Release-95690f5e4d08c2ba0129.json  toolchains-v1-2b32d1e9d1f945aa857e.json
Release/Testing/: TAG
Release/Testing/20241008-1512/: Test.xml
includes/: TigorEngine.h  TigorGUI.h  ZamEngine.h  ZamGUI.h
includes/Core/: e_blue_print.h  e_buffer.h  e_camera.h  e_device.h  e_memory.h  e_physics.h  e_texture.h  e_transform.h  e_window.h  engine.h  graphicsItems.h  graphicsObject.h  pipeline.h  swapchain.h  vulkan_android.h
includes/Data/: e_resource_data.h  e_resource_descriptors.h  e_resource_engine.h  e_resource_shapes.h
includes/GUI/: GUIManager.h  e_widget.h  e_widget_button.h  e_widget_combobox.h  e_widget_entry.h  e_widget_image.h  e_widget_list.h  e_widget_range.h  e_widget_roller.h  e_widget_scroll.h  e_widget_top_menu.h  e_widget_window.h
includes/Objects/: gameObject.h  gameObject2D.h  gameObject3D.h  light_object.h  marchingcube_object.h  models.h  particleSystem2D.h  particleSystem3D.h  primitiveObject.h  render_texture.h  shape_object.h  sprite_object.h  terrain_object.h
includes/Tools/: builder_lang.h  e_direct.h  e_math.h  e_shaders.h  e_tools.h  fbxLoader.h  glTFLoader.h  intersections2D.h  intersections3D.h  rayIntersections3D.h  shader_builder.h
includes/Variabels/: e_buffers_variables.h  e_math_variables.h  e_pipeline_variables.h  e_texture_variables.h  e_vertex.h  engine_includes.h  model_include.h
includes/wManager/: input_manager.h  manager_includes.h  win_defines.h  window_manager.h  x11_defines.h
libs/: tinyobj_loader.h
src/: TigorEngine.c  TigorGUI.c  ZamEngine.c  ZamGUI.c
src/Core/: e_blue_print.c  e_buffer.c  e_camera.c  e_debuger.c  e_descriptor.c  e_device.c  e_memory.c  e_physics.c  e_texture.c  e_transform.c  e_window.c  engine.c  graphicsObject.c  pipeline.c  swapchain.c  vulkan_android.c
src/Data/: e_resource_data.c  e_resource_descriptors.c  e_resource_engine.c  e_resource_shapes.c
src/GUI/: GUIManager.c  e_widget.c  e_widget_button.c  e_widget_combobox.c  e_widget_entry.c  e_widget_entry_area.c  e_widget_image.c  e_widget_list.c  e_widget_range.c  e_widget_roller.c  e_widget_scroll.c  e_widget_top_menu.c  e_widget_window.c
src/Objects/: e_audioObject.c  gameObject.c  gameObject2D.c  gameObject3D.c  light_object.c  marchingcube_object.c  models.c  particleSystem2D.c  particleSystem3D.c  primitiveObject.c  render_texture.c  shape_object.c  sprite_object.c  terrain_object.c
src/Tools/: builder_lang.c  e_direct.c  e_math.c  e_shaders.c  e_tools.c  fbxLoader.c  glTFLoader.c  intersections2D.c  intersections3D.c  objLoader.c  rayIntersections2D.c  rayIntersections3D.c  shader_builder.c
src/wManager/: input_manager.c  vulkan.c  win_init.c  win_monitor.c  win_thread.c  win_tools.c  win_window.c  window.c  window_manager.c  x11_init.c  x11_monitor.c  x11_tools.c  x11_window.c
tests/: create_2d.c  create_object_test.c  file_path_test.c  memory_test.c  render_objets_test.c  shader_builder_test.c  terrain_test.c  test_gui.c  test_model.c  test_particles.c  test_physics.c  test_physics2D.c  test_physics3D.c
